@@ -6,14 +6,11 @@ import com.banking.business.dtos.responses.loanapplications.GetLoanApplicationRe
 import com.banking.business.mappings.LoanApplicationMapper;
 import com.banking.business.rules.LoanApplicationBusinessRules;
 import com.banking.core.utils.paging.PageDto;
-import com.banking.entities.LoanApplication;
-import com.banking.enums.CustomerType;
+import com.banking.entities.*;
 import com.banking.enums.LoanApplicationStatus;
-import com.banking.repositories.abstracts.CorporateCustomerRepository;
-import com.banking.repositories.abstracts.IndividualCustomerRepository;
-import com.banking.repositories.abstracts.LoanApplicationRepository;
-import com.banking.repositories.abstracts.LoanTypeRepository;
+import com.banking.repositories.abstracts.*;
 import lombok.AllArgsConstructor;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -22,46 +19,80 @@ import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
 public class LoanApplicationManager implements LoanApplicationService {
     private final LoanApplicationRepository repository;
-    private final LoanTypeRepository loanTypeRepository;
     private final IndividualCustomerRepository individualCustomerRepository;
     private final CorporateCustomerRepository corporateCustomerRepository;
-    private final LoanApplicationBusinessRules rules;
+    private final IndividualCustomerLoanTypeRepository individualLoanTypeRepository;
+    private final CorporateCustomerLoanTypeRepository corporateLoanTypeRepository;
     private final LoanApplicationMapper mapper;
+    private final LoanApplicationBusinessRules rules;
 
     @Override
     @Transactional
     public GetLoanApplicationResponse create(CreateLoanApplicationRequest request) {
-        var loanType = loanTypeRepository.findById(request.getLoanTypeId()).orElseThrow();
         var application = mapper.createLoanApplicationRequestToLoanApplication(request);
-
-        // Set loan type and validate amount and term
-        application.setLoanType(loanType);
-        rules.validateLoanAmount(loanType, request.getAmount());
-        rules.validateLoanTerm(loanType, request.getTerm());
-
-        // Set customer based on loan type
-        if (loanType.getCustomerType() == CustomerType.INDIVIDUAL) {
-            var customer = individualCustomerRepository.findById(request.getCustomerId()).orElseThrow();
-            application.setIndividualCustomer(customer);
-            rules.validateCustomerType(loanType, CustomerType.INDIVIDUAL);
+        
+        // Set customer and loan type based on customer type
+        var individualCustomer = individualCustomerRepository.findById(request.getCustomerId()).orElse(null);
+        if (individualCustomer != null) {
+            application.setIndividualCustomer(individualCustomer);
+            var loanType = individualLoanTypeRepository.findById(request.getLoanTypeId())
+                .orElseThrow(() -> new RuntimeException("Loan type not found"));
+            application.setIndividualCustomerLoanType(loanType);
+            
+            // Validate eligibility
+            calculateLoanDetails(application, loanType);
+            rules.validateIndividualCustomerEligibility(individualCustomer, loanType, application.getMonthlyPayment());
         } else {
-            var customer = corporateCustomerRepository.findById(request.getCustomerId()).orElseThrow();
-            application.setCorporateCustomer(customer);
-            rules.validateCustomerType(loanType, CustomerType.CORPORATE);
+            var corporateCustomer = corporateCustomerRepository.findById(request.getCustomerId())
+                .orElseThrow(() -> new RuntimeException("Customer not found"));
+            application.setCorporateCustomer(corporateCustomer);
+            var loanType = corporateLoanTypeRepository.findById(request.getLoanTypeId())
+                .orElseThrow(() -> new RuntimeException("Loan type not found"));
+            application.setCorporateCustomerLoanType(loanType);
+            
+            // Validate eligibility
+            calculateLoanDetails(application, loanType);
+            rules.validateCorporateCustomerEligibility(corporateCustomer, loanType);
         }
 
-        // Calculate loan details
         application.setStatus(LoanApplicationStatus.PENDING);
-        application.setInterestRate(loanType.getBaseInterestRate());
-        calculatePayments(application);
-
         return mapper.loanApplicationToGetLoanApplicationResponse(repository.save(application));
+    }
+
+    private void calculateLoanDetails(LoanApplication application, IndividualCustomerLoanType loanType) {
+        rules.validateLoanAmount(loanType, application.getAmount());
+        rules.validateLoanTerm(loanType, application.getTerm());
+        
+        application.setInterestRate(loanType.getInterestRate());
+        calculatePayments(application);
+    }
+
+    private void calculateLoanDetails(LoanApplication application, CorporateCustomerLoanType loanType) {
+        rules.validateLoanAmount(loanType, application.getAmount());
+        rules.validateLoanTerm(loanType, application.getTerm());
+        
+        application.setInterestRate(loanType.getInterestRate());
+        calculatePayments(application);
+    }
+
+    private void calculatePayments(LoanApplication application) {
+        var amount = application.getAmount();
+        var term = application.getTerm();
+        var monthlyInterestRate = application.getInterestRate().divide(BigDecimal.valueOf(12 * 100), 10, RoundingMode.HALF_UP);
+        
+        // Monthly Payment = P * r * (1 + r)^n / ((1 + r)^n - 1)
+        // Where: P = Principal, r = Monthly Interest Rate, n = Number of Payments
+        var temp = BigDecimal.ONE.add(monthlyInterestRate).pow(term);
+        var monthlyPayment = amount.multiply(monthlyInterestRate).multiply(temp)
+            .divide(temp.subtract(BigDecimal.ONE), 2, RoundingMode.HALF_UP);
+        
+        application.setMonthlyPayment(monthlyPayment);
+        application.setTotalPayment(monthlyPayment.multiply(BigDecimal.valueOf(term)).setScale(2, RoundingMode.HALF_UP));
     }
 
     @Override
@@ -72,54 +103,46 @@ public class LoanApplicationManager implements LoanApplicationService {
 
     @Override
     public List<GetLoanApplicationResponse> getByCustomerIdAndStatus(Long customerId, LoanApplicationStatus status) {
-        return repository.findByIndividualCustomer_IdAndStatus(customerId, status).stream()
-                .map(mapper::loanApplicationToGetLoanApplicationResponse)
-                .collect(Collectors.toList());
+        var applications = status != null ? 
+            repository.findByCustomerIdAndStatus(customerId, status) :
+            repository.findByCustomerId(customerId);
+            
+        return applications.stream()
+            .map(mapper::loanApplicationToGetLoanApplicationResponse)
+            .toList();
     }
 
     @Override
     public PageDto<GetLoanApplicationResponse> getByCustomerId(Long customerId, Pageable pageable) {
-        var page = repository.findByIndividualCustomer_Id(customerId, pageable);
-        return PageDto.of(page.map(mapper::loanApplicationToGetLoanApplicationResponse));
+        Page<GetLoanApplicationResponse> page = repository.findByCustomerId(customerId, pageable)
+            .map(mapper::loanApplicationToGetLoanApplicationResponse);
+        return PageDto.of(page);
     }
 
     @Override
     @Transactional
     public GetLoanApplicationResponse approve(Long id) {
+        rules.checkIfLoanApplicationExists(id);
         var application = repository.findById(id).orElseThrow();
         rules.checkIfCanBeApprovedOrRejected(application);
-
+        
         application.setStatus(LoanApplicationStatus.APPROVED);
         application.setDecisionDate(LocalDateTime.now());
-
+        
         return mapper.loanApplicationToGetLoanApplicationResponse(repository.save(application));
     }
 
     @Override
     @Transactional
     public GetLoanApplicationResponse reject(Long id, String reason) {
+        rules.checkIfLoanApplicationExists(id);
         var application = repository.findById(id).orElseThrow();
         rules.checkIfCanBeApprovedOrRejected(application);
-
+        
         application.setStatus(LoanApplicationStatus.REJECTED);
         application.setRejectionReason(reason);
         application.setDecisionDate(LocalDateTime.now());
-
+        
         return mapper.loanApplicationToGetLoanApplicationResponse(repository.save(application));
-    }
-
-    private void calculatePayments(LoanApplication application) {
-        var amount = application.getAmount();
-        var term = application.getTerm();
-        var monthlyInterestRate = application.getInterestRate().divide(BigDecimal.valueOf(1200), 10, RoundingMode.HALF_UP);
-        
-        // Monthly Payment = P * r * (1 + r)^n / ((1 + r)^n - 1)
-        // where P = principal, r = monthly interest rate, n = number of months
-        var temp = BigDecimal.ONE.add(monthlyInterestRate).pow(term);
-        var monthlyPayment = amount.multiply(monthlyInterestRate).multiply(temp)
-                .divide(temp.subtract(BigDecimal.ONE), 2, RoundingMode.HALF_UP);
-        
-        application.setMonthlyPayment(monthlyPayment);
-        application.setTotalPayment(monthlyPayment.multiply(BigDecimal.valueOf(term)));
     }
 } 
